--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,6 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
+  /* First Page */
 .intropage {
+  text-align:center;
   margin-left: auto;
   margin-right: auto;
 }
@@ -38,6 +11,8 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+input, select, button {font: 12px "Century Gothic", Futura, sans-serif;}
 
 .intropage h1 {
   font: 20px "Century Gothic", Futura, sans-serif;
@@ -54,4 +29,198 @@
   /* word-wrap:break-word; */
   margin-left: auto;
   margin-right: auto;
+  text-align:left;
+}
+
+#legal {
+  margin: 0 auto;
+  margin-top: 1.5em;
+  font-size: 0.8em;
+}
+
+button {
+  background-color: white;
+  color: black;
+  border: 1px solid rgb(8, 8, 8);
+  border-top: 1px solid #e0e0e0;
+  border-left: 1px solid #e0e0e0;
+  margin: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
+  height: 29px;
+  min-width: 70px;
+}
+
+button:hover {background-color: #e7e7e7;}
+
+button:active {
+  border-left: 1px solid #c9c9c9;
+  border-top: 1px solid #c9c9c9;
+  background: none;
+  background-color: #c9c9c9;
+}
+
+button[disabled] {
+  background-color: rgb(97, 92, 92);
+  border: 1px solid #999;
+  border-top: 1px solid #e0e0e0;
+  border-left: 1px solid #e0e0e0;
+  cursor: not-allowed;
+}
+
+/* Progress Bar*/
+.progressbar {
+  width: 210px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+.progressbar h3 {
+  font: 15px "Century Gothic", Futura, sans-serif;
+  display: block;
+  max-width:600px;
+  margin:5px;
+  /* word-wrap:break-word; */
+  text-align: center;
+}
+
+/* Sliding Bar*/
+.scoringslidingbar {
+  margin-left: auto;
+  margin-right: auto;
+  width: 420px;
+  height: 100px;
+}
+
+#leftLabel {
+  text-align: left;
+  width: 210px;
+  display: block;
+  margin-bottom: 0px;
+}
+
+#rightLabel {
+  text-align: right;
+  width: 210px;
+  display: block;
+  margin-bottom: 0px;
+}
+
+#bar {
+  display: block;
+  margin-left: 0;
+  margin-right: 0;
+  float:left;
+}
+
+.scoringslidingbar h1 {
+  font: 20px "Century Gothic", Futura, sans-serif;
+  display: block;
+  /* word-wrap:break-word; */
+  float:left;
+}
+
+/* Video Page */
+
+.experiments {
+  text-align:center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.videoplayer {
+  width: 600px;
+  height: 350px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  text-align: center;
+}
+
+video {
+  width: 500px;
+  height: 350px;
+}
+
+
+/* Questions */
+
+.compquestionnaire {
+  width: 800px;
+  height: 800px;
+  text-align:center;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+#question {
+  font: 20px "Century Gothic", Futura, sans-serif;
+  display: block;
+}
+
+#answers {
+  font: 18px "Century Gothic", Futura, sans-serif;
+  display: block;
+}
+
+.personalquestionnaire {
+  width: 800px;
+  height: 800px;
+  text-align:center;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+.table-survey {
+  font: 15px "Century Gothic", Futura, sans-serif;
+  display: block;
+}
+
+.block-text {
+  font: 15px "Century Gothic", Futura, sans-serif;
+  width: 500px;
+  text-align: left;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 1em;
+  line-height:1.2em;
+}
+
+.table-survey {
+  max-width: 60rem;
+  min-width: 40rem;
+}
+
+#form {
+  text-align: center;
+}
+
+#infoQ{
+  font-size: 16px;
+  margin-top: 1em;
+}
+
+.table-survey {
+  max-width: 60rem;
+  min-width: 40rem;
+}
+
+.demographic-div {
+  text-align: left; 
+  max-width: 40rem; 
+  margin-left: auto; 
+  margin-right: auto;
+}
+
+.infoquestionnaire {
+  font: 15px "Century Gothic", Futura, sans-serif;
+}
+
+/* End Page */
+.endpage {
+  font: 18px "Century Gothic", Futura, sans-serif;
+  display: block;
 }
